--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InovaAgro</title>
+    <title>InovaAgro - Soluções para o Agronegócio</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/icone.png" type="image/x-icon">
 
@@ -30,118 +30,38 @@
     </section>
 
     <section id="produtos">
-        <h2>Nossos Produtos</h2>
+        <h1>Nossos Produtos</h1>
         <div class="product">
-            <a href="PDF's/Catalogo Biologicos RF.pdf" target="_blank" class="btn">Catalogo de Biologico</a>
+            <a href="pdf/Catalogo Biologicos RF.pdf" target="_blank" class="btn">Catalogo de Biologico</a>
         </div>
 
         <div class="product">
-            <a href="PDF's/Catalogo linha Agricola RF.pdf" target="_blank" class="btn">Catalogo Linha Agricola</a>
-
-        </div>
-
-        <div class="product">
-            <a href="PDF's/Catalogo linha Pecuaria RF.pdf" target="_blank" class="btn">Catalogo Linha Pecuaria</a>
+            <a href="pdf/Catalogo linha Agricola RF.pdf" target="_blank" class="btn">Catalogo Linha Agricola</a>
 
         </div>
 
         <div class="product">
-            <a href="PDF's/IOP_68 Folder Digital IOP (1).pdf" target="_blank" class="btn">IOP full</a>
+            <a href="pdf/Catalogo linha Pecuaria RF.pdf" target="_blank" class="btn">Catalogo Linha Pecuaria</a>
 
         </div>
 
-        <h1 id="titulo">SEMENTES</h1>
-
-        <h2 id="titulo">SORGO</h2>
-        <a href="sorgo/AGRI-001E.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Sorgo Forrageiro AGRI 001E</h2>
-            </div>
-        </a>
-
-        <a href="sorgo/AGRI-002E.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Sorgo Gigante AGRI 002E</h2>
-            </div>
-        </a>
-
-        <a href="sorgo/Sorgao-Granifero-LAS2707G.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Sorgo Granífero LAS2707G</h2>
-            </div>
-        </a>
-
-        <a href="sorgo/Sorgao-Granifero-LAS3004G.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Sorgo Granífero LAS3004G</h2>
-            </div>
-        </a>
-
-
-        <h2 id="titulo">MILHO</h2>
-
-
-        <a href="milho/LAS581VIP3.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Milho LAS VIP581 3</h2>
-            </div>
-        </a>
-
-        <a href="milho/LAS545VIP3.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Milho LAS VIP545 3</h2>
-            </div>
-        </a>
-
-        <a href="milho/LAS590PRO3.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Milho LAS PRO590 3</h2>
-            </div>
-        </a>
-
-        <a href="milho/LAS473g.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Milho LAS 473G</h2>
-            </div>
-        </a>
-
-        <a href="milho/LAS464g.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Milho LAS 464G</h2>
-            </div>
-        </a>
-
-        <a href="milho/LAS473.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Milho LAS 473</h2>
-            </div>
-        </a>
-        
-        <a href="milho/LAS464.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Milho LAS 464</h2>
-            </div>
-        </a>
-
-        <a href="milho/LAS2404D.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Milho LAS 2404D</h2>
-            </div>
-        </a>
-        
-        <a href="milho/AGRI330.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Milho AGRI 330</h2>
-            </div>
-        </a>
-
-        <a href="milho/AGRI320.pdf" target="_blank" class="btnsorgo">
-            <div class="product">
-                <h2>Milho AGRI 320</h2>
-            </div>
-        </a>
+        <div class="product">
+            <a href="pdf/IOP_68 Folder Digital IOP (1).pdf" target="_blank" class="btn">IOP full</a>
 
         </div>
+
+        <h2>SEMENTES</h2>
+
+        <div class="product">
+            <a href="pdf/sorgo.pdf" target="_blank" class="btn">SORGO</a>
+
+        </div>
+
+        <div class="product">
+            <a href="pdf/milho.pdf" target="_blank" class="btn">MILHO</a>
+
+        </div>
+
     </section>
 
     <!-- <section id="sustentabilidade">
