--- a/soja.html
+++ b/soja.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InovaAgro</title>
+    <title>InovaAgro - SOJA</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/icone.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -15,8 +17,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#produtos">Produtos</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="index.html">Voltar</a></li>
                 <li>
                     <a href="https://www.instagram.com/inovaagroerechim/#" target="_blank">
                         <i class="fa-brands fa-instagram"></i>
@@ -28,9 +29,9 @@
     </header>
 
     <section id="hero">
-        <h1>Inovação e Sustentabilidade no Agronegócio</h1>
+        <h1>Catalogo de SOJA</h1>
         <br>
-        <p>Fornecendo soluções inovadoras em sementes e nutrição vegetal para o produtor rural.</p>
+        <a href="index.html" class="btn">Voltar</a>
     </section>
 
     <section id="produtos">
@@ -38,33 +39,27 @@
         <h1>Nossos Produtos</h1>
         <div class="product-container">
             <div class="product">
-                <a href="pdf/Catalogo Biologicos RF.pdf" target="_blank" class="btn">Catálogo de Biológico</a>
+                <a href="https://www.brasmaxgenetica.com.br/blog/brasmax-zeus/" target="_blank" class="btn">Brasmax Zeus IPRO</a>
             </div>
             <div class="product">
-                <a href="pdf/Catalogo linha Agricola RF.pdf" target="_blank" class="btn">Catálogo Linha Agrícola</a>
+                <a href="https://www.brasmaxgenetica.com.br/cultivar-regiao-sul/?produto=14280#" target="_blank" class="btn">Brasmax Cromo TF IPRO</a>
             </div>
             <div class="product">
-                <a href="pdf/Catalogo linha Pecuaria RF.pdf" target="_blank" class="btn">Catálogo Linha Pecuária</a>
+                <a href="https://www.brasmaxgenetica.com.br/cultivar-regiao-sul/?produto=37109/?utm_source=blog&utm_medium=post&utm_content=brasmax-titanium-tf-i2x&utm_campaign=cultivares-de-soja" target="_blank" class="btn">Brasmax Titanium TF I2X</a>
             </div>
             <div class="product">
-                <a href="pdf/IOP_68 Folder Digital IOP (1).pdf" target="_blank" class="btn">IOP Full</a>
+                <a href="https://www.brasmaxgenetica.com.br/cultivar-regiao-sul/?produto=21120/?utm_source=blog&utm_medium=post&utm_content=brasmax-venus-ce&utm_campaign=cultivares-de-soja" target="_blank" class="btn">Brasmax Vênus CE</a>
             </div>
-        </div>
+            <div class="product">
+                <a href="https://www.brasmaxgenetica.com.br/cultivar-regiao-sul/?produto=14284/?utm_source=blog&utm_medium=post&utm_content=brasmax-trovao-i2x&utm_campaign=cultivares-de-soja" target="_blank" class="btn">Brasmax Trovão I2X</a>
+            </div>
+            <div class="product">
+                <a href="https://www.brasmaxgenetica.com.br/cultivar-regiao-sul/?produto=1133" target="_blank" class="btn">Brasmax Raio IPRO</a>
+            </div>
+            <div class="product">
+                <a href="https://www.brasmaxgenetica.com.br/cultivar-regiao-sul/?produto=14271/?utm_source=blog&utm_medium=post&utm_content=brasmax-torque-i2x&utm_campaign=cultivares-de-soja" target="_blank" class="btn">Brasmax Torque I2X</a>
+            </div>
 
-        <h2>SEMENTES</h2>
-        <div class="product-container">
-            <div class="product">
-                <a href="pdf/sorgo.pdf" target="_blank" class="btn">SORGO</a>
-            </div>
-            <div class="product">
-                <a href="pdf/milho.pdf" target="_blank" class="btn">MILHO</a>
-            </div>
-            <div class="product">
-                <a href="soja.html" target="_blank" class="btn">SOJA</a>
-            </div>
-            <div class="product">
-                <a href="trigo.html" target="_blank" class="btn">TRIGO</a>
-            </div>
         </div>
     </section>
 
@@ -87,4 +82,5 @@
 
     <script src="js/js.js" type="text/javascript"></script>
 </body>
+
 </html>
