--- a/trigo.html
+++ b/trigo.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InovaAgro</title>
+    <title>InovaAgro - TRIGO</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/icone.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -15,8 +17,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#produtos">Produtos</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="index.html">Voltar</a></li>
                 <li>
                     <a href="https://www.instagram.com/inovaagroerechim/#" target="_blank">
                         <i class="fa-brands fa-instagram"></i>
@@ -28,9 +29,9 @@
     </header>
 
     <section id="hero">
-        <h1>Inovação e Sustentabilidade no Agronegócio</h1>
+        <h1>Catalogo de TRIGO</h1>
         <br>
-        <p>Fornecendo soluções inovadoras em sementes e nutrição vegetal para o produtor rural.</p>
+        <a href="index.html" class="btn">Voltar</a>
     </section>
 
     <section id="produtos">
@@ -38,32 +39,28 @@
         <h1>Nossos Produtos</h1>
         <div class="product-container">
             <div class="product">
-                <a href="pdf/Catalogo Biologicos RF.pdf" target="_blank" class="btn">Catálogo de Biológico</a>
+                <a href="https://biotrigo.com.br/nutricao-animal/energix-203/" target="_blank" class="btn">EnergiX
+                    203</a>
             </div>
             <div class="product">
-                <a href="pdf/Catalogo linha Agricola RF.pdf" target="_blank" class="btn">Catálogo Linha Agrícola</a>
+                <a href="https://biotrigo.com.br/cultivares/tbio-calibre/" target="_blank" class="btn">TBIO CALIBRE</a>
             </div>
             <div class="product">
-                <a href="pdf/Catalogo linha Pecuaria RF.pdf" target="_blank" class="btn">Catálogo Linha Pecuária</a>
+                <a href="https://biotrigo.com.br/cultivares/tbio-ponteiro/" target="_blank" class="btn">TBIO
+                    PONTEIRO</a>
             </div>
             <div class="product">
-                <a href="pdf/IOP_68 Folder Digital IOP (1).pdf" target="_blank" class="btn">IOP Full</a>
-            </div>
-        </div>
-
-        <h2>SEMENTES</h2>
-        <div class="product-container">
-            <div class="product">
-                <a href="pdf/sorgo.pdf" target="_blank" class="btn">SORGO</a>
+                <a href="https://biotrigo.com.br/cultivares/tbio-audaz/" target="_blank" class="btn">TBIO AUDAZ</a>
             </div>
             <div class="product">
-                <a href="pdf/milho.pdf" target="_blank" class="btn">MILHO</a>
+                <a href="https://biotrigo.com.br/cultivares/tbio-toruk/" target="_blank" class="btn">TBIO TORUK</a>
             </div>
             <div class="product">
-                <a href="soja.html" target="_blank" class="btn">SOJA</a>
+                <a href="https://biotrigo.com.br/cultivares/tbio-motriz/" target="_blank" class="btn">TBIO MOTRIZ</a>
             </div>
             <div class="product">
-                <a href="trigo.html" target="_blank" class="btn">TRIGO</a>
+                <a href="https://biotrigo.com.br/cultivares/biotrigo-talisma/" target="_blank" class="btn">TBIO
+                    TALISMÃ</a>
             </div>
         </div>
     </section>
@@ -87,4 +84,5 @@
 
     <script src="js/js.js" type="text/javascript"></script>
 </body>
+
 </html>
